fixed headline mobile spacing

--- a/_sass/base/_typography.scss
+++ b/_sass/base/_typography.scss
@@ -205,6 +205,10 @@ hr {
     font-size: 1.5em;
   }
 
+  .post-title {
+    font-size: 2.5em;
+  }
+
   .intro-text {
     width: 305px;
   }
